--- a/colorstackwinterhack2025.html
+++ b/colorstackwinterhack2025.html
@@ -89,21 +89,20 @@
         <p class="mt-2 text-gray-600">Dec 19, 2025 — Jan 12, 2026</p>
       </div>
 
-
       <!-- Prep time reference (planning + team formation) -->
-    <div class="p-6 border border-gray-200 rounded-2xl shadow-sm text-center">
-      <h3 class="font-semibold text-lg">Prep Time</h3>
-      <p class="mt-2 text-gray-600">
-        Dec 15–18<br/>
-        Team formation, role assignments, etc.
-      </p>
-    </div>
+      <div class="p-6 border border-gray-200 rounded-2xl shadow-sm text-center">
+        <h3 class="font-semibold text-lg">Prep Time</h3>
+        <p class="mt-2 text-gray-600">
+          Dec 15–18<br/>
+          Team formation, role assignments, etc.
+        </p>
+      </div>
 
       <!-- Ceremony time reference (this is when theme + awards unlock) -->
       <div class="p-6 border border-gray-200 rounded-2xl shadow-sm text-center">
         <h3 class="font-semibold text-lg">Opening Ceremony</h3>
         <p class="mt-2 text-gray-600">
-          Dec 15 @ 3:00 PM EST<br/>
+          Dec 15 @ 3:00 PM EST / 12:00 PM PT / 1:00 PM MT<br/>
           Theme & Awards Reveal
         </p>
       </div>
@@ -165,10 +164,10 @@
         </p>
 
         <ul class="mt-4 space-y-2 text-gray-700">
-          <li>• <strong>Mon, Dec 15:</strong> Opening Ceremony (Theme + Awards Reveal) @ <strong>3:00 PM EST</strong></li>
+          <li>• <strong>Mon, Dec 15:</strong> Opening Ceremony (Theme + Awards Reveal) @ <strong>3:00 PM EST / 12:00 PM PT / 1:00 PM MT</strong></li>
           <li>
-            • <strong>Dec 15–19:</strong> Team Formation & Networking — brainstorming and idea exploration, 
-            defining project concepts, evaluating and refining ideas, assigning team roles and responsibilities, 
+            • <strong>Dec 15–19:</strong> Team Formation & Networking — brainstorming and idea exploration,
+            defining project concepts, evaluating and refining ideas, assigning team roles and responsibilities,
             and discussing each team member’s strengths and how they contribute to building the project.
           </li>
           <li>• <strong>Fri, Dec 19:</strong> Hackathon officially starts</li>
@@ -184,7 +183,7 @@
         <h3 class="text-2xl font-semibold text-gray-900">Theme</h3>
         <p class="mt-3 text-gray-700 leading-relaxed">
           The hackathon theme is <strong>hidden</strong> and will be unveiled live at the
-          <strong>Opening Ceremony on Dec 15 @ 3:00 PM EST</strong>.
+          <strong>Opening Ceremony on Dec 15 @ 3:00 PM EST / 12:00 PM PT / 1:00 PM MT</strong>.
         </p>
       </div>
 
@@ -226,7 +225,7 @@
       <div class="mt-12">
         <h3 class="text-2xl font-semibold text-gray-900">Submissions</h3>
         <p class="mt-3 text-gray-700 leading-relaxed">
-          All submissions are due on <strong>Friday, Jan 12 @ 11:59 PM EST</strong>.
+          All submissions are due on <strong>Friday, Jan 12 @ 11:59 PM EST / 8:59 PM PT / 9:59 PM MT</strong>.
         </p>
       </div>
 
@@ -246,7 +245,7 @@
 
         <p class="mt-4 text-gray-700">
           <strong>Category awards</strong> will be <strong>unveiled at the Opening Ceremony</strong>
-          (<strong>Mon, Dec 15 @ 3:00 PM EST</strong>).
+          (<strong>Mon, Dec 15 @ 3:00 PM EST / 12:00 PM PT / 1:00 PM MT</strong>).
         </p>
 
         <p class="mt-4 text-gray-700">
@@ -283,7 +282,7 @@
           <!-- FAQ LOCKED -->
           <p class="mt-2 text-gray-700" id="faqThemeLocked">
             Yes — but it’s <strong>hidden</strong> until the
-            <strong>Opening Ceremony on Mon Dec 15 @ 3:00 PM EST</strong>.
+            <strong>Opening Ceremony on Mon Dec 15 @ 3:00 PM EST / 12:00 PM PT / 1:00 PM MT</strong>.
           </p>
 
           <!-- FAQ REVEALED -->
