--- a/hackathonvolunteer-certificates-codefest2025.html
+++ b/hackathonvolunteer-certificates-codefest2025.html
@@ -150,7 +150,7 @@ function setStatus(type, html){
   document.getElementById('certificateResult').innerHTML =
     `<div class="infobox">
        <strong>Certificate Status</strong><br>
-       This system verifies volunteer participation and donation status.
+       This system verifies volunteer participation and donation registration status.
      </div>
      <div class="alert ${cls}">${html}</div>`;
 }
